<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_id">919687801386078</string>
	
    <string name="app_name">LoLTravel</string>
    <string name="main_title">LoLTravel</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Do you want to finish?</string>   
    <string name="facebook_title">Wait</string> 
    <string name="facebook_message">Getting the facebook info...</string> 
    <string name="title_not_exist_survey">Socioeconomic and Residential environment do not exist. Please create a survey</string>
    <string name="ok_not_exist_survey">Go to survey</string>
    <string name="gps_title">GPS Alert</string>
    <string name="gps_message">You have to turn on the GPS to go to menu. Do you want to turn on the GPS?</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="history_title">Travel History</string>
    <string name="information_title">Travel Information</string>
    <string name="close">Close</string>
    <string name="current_location">Current Location</string>
    <string name="set_origin">Do you want to set as a origin point</string>
    <string name="set_destination">Do you want to set as a destination point</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="toast_success">saved successfully</string>
    
    <string name="main_content">This application is to collect your leisure trips. \n
		Allow this application to:\n
		1) Your personal information\n
		2) Your accountants as SNS\n
		3) Your GPS data</string>
    <string name="q1">Socioeconomic</string>
    <string name="q11">1. Checck your sex?</string>
    <string name="q11_1">female</string>
    <string name="q11_2">man</string>
    <string name="q12">2. Your age?</string>
    <string name="q13">3. Your average income(Unit, dollar)</string>
    <string name="q14">4. Your address</string>
    <string name="q15">5. Do you have a drive license?</string>
    <string name="q15_1">yes</string>
    <string name="q15_2">no</string>
    <string name="q2">Residential Environment</string>
    <string name="q21">1. Satisfaction of Public transport</string>
    <string name="q21_1">1p</string>
    <string name="q21_2">2p</string>
    <string name="q21_3">3p</string>
    <string name="q21_4">4p</string>
    <string name="q21_5">5p</string>
    <string name="q22">2. Satisfaction of Commercial facility</string>
    <string name="q23">3. Satisfaction of Leisure facility</string>
    <string name="q24">4. Satisfaction of Green space</string>
    <string name="q25">5. What do you have your floor space?</string>
    <string name="q25_1">Under 49.57m2</string>
    <string name="q25_2">49.58m2 ~ 59.4 m2</string>
    <string name="q25_3">59.5 m2 ~ 79.32 m2</string>
    <string name="q25_4">79.33 m2 ~ 105.78 m2</string>
    <string name="q25_5">Above 105.79 m2</string>
    <string name="q3">Travel mode and Purpose</string>
    <string name="q31">1. Did you use a flight for this trip?</string>
    <string name="q31_1">yes</string>
    <string name="q31_2">no</string>
    <string name="q32">2. What is your travel mode for this trip?</string>
    <string name="q32_1">Walking, Cycling</string>
    <string name="q32_2">Car</string>
    <string name="q32_3">Public transport</string>
    <string name="q32_4">Taxi</string>
    <string name="q32_5">Etc</string>
    <string name="q33">3. What purpose is this trip?</string>
    <string name="q33_1">Shopping</string>
    <string name="q33_2">Movie, Performance</string>
    <string name="q33_3">Recreation</string>
    <string name="q33_4">Hobby, Sports</string>
    <string name="q33_5">Green, Eco tour</string>
    <string name="q33_6">Relaxing</string>
    <string name="q33_7">Entertainment, Hang out</string>
    <string name="q33_8">Etc</string>

    <string name="check_31">Check if you use flight for this trip</string>
    <string name="check_32">Check what is your travel mode for this trip</string>
    <string name="check_33">Check what is your purpose for this trip</string>
    
    <string name="email">e-mail</string>
    <string name="name">name</string>
    <string name="register">register</string>
    <string name="menu1">Socioeconomic &amp; Residential Environment</string>
    <string name="menu2">New Trip</string>
    <string name="menu3">Travel History</string>
    <string name="menu4">Point Ranking</string>
    <string name="unit">dollar</string>
    
    <string name="travel_alert1">여행정보를 입력하세요.</string>
</resources>
